# huthut

./: Cargo.toml  README.md
src/: annotated.rs  main.rs  syllables.rs  twitter.rs
