[package]
name = "huthut"
version = "0.1.0"
authors = ["Devin Ivy <devin@bigroomstudios.com>"]
edition = "2018"

[dependencies]
deunicode = "1.0.0"
dotenv = "0.13.0"
envy = "0.3.3"
futures = "0.1.4"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.x"
twitter-stream = "0.9.0"
wordsworth = "0.1.x"
